ChangeLog for KNotes
====================

2004/11/28  Michael Brade <brade@kde.org>

    * fixed #90744, #91702, #92596, #93499: save modified notes on quit, may
      not have happened when the note still had focus. Also, the problem
      with knotesnotes.ics is gone now.

2004/09/27  Michael Brade <brade@kde.org>

    * no compile-time dependency on kdebase allowed, so read kwinrc directly

2004/08/31  Michael Brade <brade@kde.org>

    * now KNotes always saves the desktop of its notes since this is what one
      would expect, I guess. Visible change: if you hide a note, change to
      another desktop and show it again, the note will be shown on the desktop
      where it has been hidden. And more important, if a note is sticky it will
      still be sticky after it is first hidden and then shown again. Let's see
      what the users' feedback will be.

      This will also make it possible to properly implement the often requested
      hide all/show all notes feature.
    * fixed #29242, #44761, #65090: implemented Show All/Hide All Notes and
      added a global shortcut for both actions. Thanks to Jakob Schroeter for
      the initial patch on which this is based and the idea to add the global
      shortcut. With my previous patch to properly store the desktop this
      feature is now usable.

2004/08/29  Michael Brade <brade@kde.org>

    * fixed #77202: removing the global event filter where I not only returned
      the proper boolean value but also (incorrectly) changed the accept/ignore
      flag of key events fixed the endless loop that caused the stack overflow.
    * fixed #68031, #81888: configuring shortcuts is possible now and changes
      are preserved between several KNotes sessions. All possible interactions
      with KNotes can have custom shortcuts, there are no hidden features
      anymore.

2004/08/28  Michael Brade <brade@kde.org>

    * fixed #71593, #86711: add the possibility to save a note to a file, either